# CMPT433-A2

./: CMakeLists.txt  test.c  wave_player.c
app/: CMakeLists.txt
app/include/: audioMixer.h  periodTimer.h  terminate.h  timer.h  udp.h
app/src/: audioMixer.c  main.c  periodTimer.c  terminate.c  timer.c  udp.c
beatbox-server/: .project  package-lock.json  package.json
beatbox-server/public/: index.html
beatbox-server/public/javascripts/: udp_ui.js
hal/: CMakeLists.txt
hal/include/hal/: acc.h  joyStick.h  led.h  wavePlayer.h
hal/src/: acc.c  joyStick.c  led.c  wavePlayer.c
later/: BeagleBone Beat-Box.html
